@@ -2,7 +2,7 @@ Package: googleVis
 Type: Package
 Title: R Interface to Google Charts
 Version: 0.6.3
-Date: 2017-07-03
+Date: 2018-11-09
 Authors@R: c(person("Markus", "Gesmann", role = c("aut", "cre"),
     email = "markus.gesmann@googlemail.com"),
     person("Diego", "de Castillo", role = "aut",
@@ -33,4 +33,4 @@ BugReports: https://github.com/mages/googleVis/issues
 LazyLoad: yes
 LazyData: yes
 VignetteBuilder: knitr
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
